--- a/index.html
+++ b/index.html
@@ -25,5 +25,79 @@
     </div>
   </header>
   <!-- /.header -->
+
+  <div class="main">
+    <div class="container">
+      <div class="main-wrap">
+        <div class="main-text">
+          <h1 class="main-text__title">
+            Внутренняя отделка помещений "под ключ"
+            <span>с гарантией качества, прописанной в договоре</span>
+          </h1>
+          <div class="main-advantages">
+            <div class="main-advantages__item">
+              <div class="main-advantages__img main-advantages__img-1">
+
+              </div>
+              <div class="main-advantages__text">
+                  Точно соблюдаем сроки
+              </div>
+            </div> <!--main-advantagex__item-->
+
+            <div class="main-advantages__item">
+                <div class="main-advantages__img main-advantages__img-2">
+  
+                </div>
+                <div class="main-advantages__text">
+                  Рассчитаем смету на работы и материалы в день обращения
+                </div>
+              </div> <!--main-advantagex__item-->
+
+            <div class="main-advantages__item">
+              <div class="main-advantages__img main-advantages__img-3">
+    
+              </div>
+              <div class="main-advantages__text">
+                Предложим более 100 вариантов исполнения дизайна Вашего жилья                      
+              </div>
+            </div> <!--main-advantagex__item-->
+          </div>
+        </div>
+        <div class="main-image">
+          <img src="img/main/main-img.png" alt="План-схема">
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- /.main -->
+
+  <section class="feedback">
+    <div class="container">
+      <div class="form">
+        <h2 class="form__title">Мы бесплатно разработаем дизайн-проект Вашего жилья и реализуем его!</h2>
+        <span class="form__subtitle">Оставьте заявку на разработку бесплатного дизайн-проекта!</span>
+        <form action="#">
+          <input type="text" class="input input-name form__input" placeholder="Ваше имя">
+          <input type="tel" class="input input-tel form__input" pattern="\+([7])-([0-9]{3})-([0-9]{2})-([0-9]{2})-([0-9]{3})" placeholder="Ваш телефон" value="">
+          <button type="submit" class="button form__button">Получить бесплатный дизайн-проект</button>
+        </form>
+        <div class="form__manager">
+          <div class="form__manager-recall_left">
+            Наш менеджер перезвонит Вам в течение 60 секунд
+          </div>
+          <div class="form__manager-image"><img src="img/feedback/caller.png" alt="Звонок"></div>
+          <div class="form__manager-recall_right">
+              <div class="form__manager-recall_right_text">
+                или перезвоните нам сами
+              </div>
+              <div class="form__manager-recall_right_phone">
+                +7 (495) 42-251-31
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- /.feedback -->
 </body>
 </html>
