--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <span class="form__subtitle">Оставьте заявку на разработку бесплатного дизайн-проекта!</span>
         <form action="#">
           <input type="text" class="input input-name form__input" placeholder="Ваше имя">
-          <input type="tel" class="input input-tel form__input" pattern="\+([7])-([0-9]{3})-([0-9]{2})-([0-9]{2})-([0-9]{3})" placeholder="Ваш телефон" value="">
+          <input type="tel" class="input input-tel form__input" pattern="\+([7])-([0-9]{3})-([0-9]{2})-([0-9]{2})-([0-9]{3})" placeholder="Ваш номер телефона" title="+7-999-99-99-999" value="">
           <button type="submit" class="button form__button">Получить бесплатный дизайн-проект</button>
         </form>
         <div class="form__manager">
